k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-sample-app
  labels:
    app: gke-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gke-sample-app
  template:
    metadata:
      labels:
        app: gke-sample-app
    spec:
      containers:
        - name: gke-sample-app
          image: gcr.io/useful-variety-470306-n5/gke-sample-app:$(Build.BuildId)
          ports:
            - containerPort: 5000
