k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-sample-service
spec:
  selector:
    app: gke-sample-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
